examples/test/testpolicy19707.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19707
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key40: value22
      key35: value41
      key48: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value44
          key40: value47
      podSelector:
        matchLabels:
          key31: value1
          key29: value29
          key33: value48
